packages/typ/tests/fixtures/diagnostics/0955_gadt_packed_branch_result_mismatch_10.ml.expected
File "0955_gadt_packed_branch_result_mismatch_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0955_gadt_packed_branch_result_mismatch_10 is not a valid module name.

File "0955_gadt_packed_branch_result_mismatch_10.ml", line 9, characters 33-34:
9 |   | Pack_kappa (Bool_kappa b) -> b
                                     ^
Error: The value b has type bool but an expression was expected of type int
